made the Counter prototype, without ngrx

--- a/src/app/counter/counter/counter.component.html
+++ b/src/app/counter/counter/counter.component.html
@@ -8,7 +8,7 @@
 
 
         <div class="my-3">
-            <app-counter-buttons>
+            <app-counter-buttons (increment)="onIncrement()" (decrement)="onDecrement()" (reset)="onReset()">
 
             </app-counter-buttons>
         </div>
