--- a/src/app/counter/counter-output/counter-output.component.html
+++ b/src/app/counter/counter-output/counter-output.component.html
@@ -1,5 +1,6 @@
 <div>
     <h3>
-        Counter is: {{counter}}
+        <!-- Counter is: {{counter}} -->
+        Counter is: {{(counter$ | async)?.counter }}
     </h3>
 </div>
