passed custom increment to action

--- a/src/app/counter/counter/counter.component.html
+++ b/src/app/counter/counter/counter.component.html
@@ -12,5 +12,13 @@
 
             </app-counter-buttons>
         </div>
+
+        <div class="my-3">
+            <app-custom-counter-input>
+
+            </app-custom-counter-input>
+        </div>
+
+
     </div>
 </div>
