--- a/src/app/counter/counter-output/counter-output.component.html
+++ b/src/app/counter/counter-output/counter-output.component.html
@@ -1,6 +1,5 @@
 <div>
     <h3>
-        <!-- Counter is: {{counter}} -->
-        Counter is: {{(counter$ | async)?.counter }}
+        Counter is: {{counter}}
     </h3>
 </div>
