--- a/src/app/counter/custom-counter-input/custom-counter-input.component.html
+++ b/src/app/counter/custom-counter-input/custom-counter-input.component.html
@@ -1,7 +1,14 @@
 <div class=" col-6 offset-3">
+    <div class="my-3">{{channelName}}</div>
     <input [(ngModel)]="value" class=" form-control" type="number" name="man" id="tex">
 
     <button (click)="onAdd()" class="btn btn-info">
         Add to counter
+    </button>
+</div>
+
+<div class="my-3">
+    <button (click)="onChangeChannelName()">
+        change Name
     </button>
 </div>
