--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -1,39 +1,51 @@
-<div class="row">
-    <div class="col-12">
-        <h3>
-            Posts List
-        </h3>
+<div class=" text-left">
+    <div class="row">
 
-        <table class="table table-striped" *ngIf=" posts$ | async as postsData ">
+        <div class="col-md-8">
+            <h3>
+                Posts List
+            </h3>
 
-            <thead>
-                <tr>
-                    <th>
-                        Id
-                    </th>
+            <div>
+                <a href="#" class="btn btn-primary" [routerLink]="['/posts/add']">Add Post</a>
+            </div>
 
-                    <th>Titile</th>
-                    <th>Description</th>
-                </tr>
-            </thead>
+            <table class="table table-striped" *ngIf=" posts$ | async as postsData ">
 
-            <tbody>
+                <thead>
+                    <tr>
+                        <th>
+                            Id
+                        </th>
 
-                <tr *ngFor="let post of postsData">
-                    <td>
-                        {{post.id}}
-                    </td>
-                    <td>
-                        {{post.title}}
+                        <th>Titile</th>
+                        <th>Description</th>
+                    </tr>
+                </thead>
 
-                    </td>
-                    <td>
-                        {{post.description}}
+                <tbody>
 
-                    </td>
-                </tr>
-            </tbody>
+                    <tr *ngFor="let post of postsData">
+                        <td>
+                            {{post.id}}
+                        </td>
+                        <td>
+                            {{post.title}}
 
-        </table>
+                        </td>
+                        <td>
+                            {{post.description}}
+
+                        </td>
+                    </tr>
+                </tbody>
+
+            </table>
+        </div>
+
+        <div class="col-md-4">
+            <router-outlet></router-outlet>
+        </div>
+
     </div>
 </div>
