--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -14,12 +14,10 @@
 
                 <thead>
                     <tr>
-                        <th>
-                            Id
-                        </th>
-
+                        <th>Id</th>
                         <th>Titile</th>
                         <th>Description</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
 
@@ -36,6 +34,9 @@
                         <td>
                             {{post.description}}
 
+                        </td>
+                        <td>
+                            <a [routerLink]="['edit', post.id]" class="btn btn-outline-dark"> Update </a>
                         </td>
                     </tr>
                 </tbody>
